# erupt

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  USER_GUIDE.md
erupt/: Cargo.toml  rustfmt.toml
erupt-examples/: Cargo.toml  compile-shaders.sh
erupt-examples/src/: pointer_chain.rs  triangle.rs
erupt/src/: lib.rs
erupt/src/utils/: allocator.rs  bytemuck.rs  decode_spv.rs  features.rs  loading.rs  mod.rs  surface.rs  vulkan_result.rs
erupt/src/utils/allocator/: allocation.rs  block.rs  mapped_memory.rs  memory_type.rs  mod.rs  object.rs  suballocator.rs
erupt_examples/: Cargo.toml  compile-shaders.sh
generator/: Cargo.toml  README.md  root.h
generator/src/: aliases.rs  cargotoml_gen.rs  codegen.rs  commands.rs  comment_gen.rs  constants.rs  declaration.rs  defines.rs  enum_exts.rs  enums.rs  eval.rs  functions.rs  handles.rs  header.rs  loaders.rs  main.rs  name.rs  origin.rs  source.rs  types.rs  utilgen.rs  utils.rs
generator/src/header/: eval.rs  mod.rs  root_gen.rs
generator/src/items/: aliases.rs  basetypes.rs  constants.rs  defines.rs  enums.rs  functions.rs  handles.rs  mod.rs  structures.rs
generator/src/items/structures/: builders.rs  mod.rs
generator/src/loaders/: mod.rs  value.rs  wrappers.rs
generator/src/structures/: mod.rs
