[package]
name = "erupt-examples"
version = "0.0.0"
authors = ["Friz64 <friz64mc@gmail.com>"]
edition = "2018"

[dependencies]
erupt = { path = "../erupt" }
winit = "0.22"
structopt = "0.3"

[[bin]]
name = "pointer-chain"
path = "src/pointer_chain.rs"

[[bin]]
name = "triangle"
path = "src/triangle.rs"

[[bin]]
name = "version"
path = "src/version.rs"
