[package]
name = "erupt"
version = "0.20.0+190"
authors = ["Friz64 <friz64@protonmail.com>"]
license = "Zlib"
description = "Vulkan API bindings"
documentation = "https://docs.rs/erupt"
repository = "https://gitlab.com/Friz64/erupt"
readme = "../README.md"
keywords = ["gamedev", "graphics", "vulkan", "bindings"]
categories = [
    "api-bindings",
    "game-development",
    "graphics",
    "rendering::graphics-api",
]
edition = "2018"
rust-version = "1.48"

[dependencies]
bitflags = "1"
smallvec = "1"
libloading = { version = "0.7", optional = true }
raw-window-handle = { version = "0.4", optional = true }
bytemuck = { version = "1", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = { version = "0.2", optional = true }

[features]
default = ["loading", "surface"]
loading = ["libloading"]
surface = ["raw-window-handle", "raw-window-metal"]
