[package]
name = "generator"
version = "2.0.0"
description = "Advanced AST juggling software"
authors = ["Friz64 <friz64mc@gmail.com>"]
edition = "2018"

[dependencies]
lang-c = "0.9"
proc-macro2 = "1.0"
quote = "1.0"
treexml = { git = "https://github.com/Friz64/treexml-rs.git", rev = "e2d7794e244414dba9665c53107d31fb0ec48140" }
heck = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
indexmap = "1.6"
itertools = "0.9"
syn = { version = "1.0", features = ["extra-traits"] }
lazy_static = "1.4"
regex = "1.3"
