[package]
name = "generator"
version = "2.0.0"
description = "Advanced AST juggling software"
authors = ["Friz64 <friz64@protonmail.com>"]
edition = "2021"

[dependencies]
lang-c = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
roxmltree = "0.14"
heck = "0.4"
pretty_env_logger = "0.4"
log = "0.4"
indexmap = "1.6"
itertools = "0.10"
syn = { version = "1.0", features = ["extra-traits", "full"] }
prettyplease = "0.1"
once_cell = "1.5"
regex = "1.4"
structopt = "0.3"
